--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     },
     "extends": [
       "eslint:recommended",
+      "plugin:prettier/recommended"
     ],
     "rules": {
       "no-console": "warn"
