--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "- li 1. ol",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "dev": "webpack serve --mode development"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-standard": "^5.0.0",
+    "html-webpack-plugin": "^5.3.2",
     "prettier": "^2.3.2",
     "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
